@@ -143,6 +143,11 @@ void doit(void)
 			GNUTLS_E_NO_CIPHER_SUITES, GNUTLS_E_AGAIN,
 			&server_ca3_localhost_rsa_decrypt_cert, &server_ca3_key, NULL, NULL);
 
+	try_with_key_fail("TLS 1.3 and TLS 1.2 with rsa encryption cert",
+			"NORMAL:-VERS-ALL:+VERS-TLS1.3:+VERS-TLS1.2",
+			GNUTLS_E_SUCCESS, GNUTLS_E_SUCCESS,
+			&server_ca3_localhost_rsa_decrypt_cert, &server_ca3_key, NULL, NULL);
+
 	try_with_key_fail("TLS 1.3 with (forced) rsa encryption cert - client should detect",
 			"NORMAL:-VERS-ALL:+VERS-TLS1.3:%DEBUG_ALLOW_KEY_USAGE_VIOLATIONS",
 			GNUTLS_E_AGAIN, GNUTLS_E_KEY_USAGE_VIOLATION,
@@ -150,7 +155,7 @@ void doit(void)
 
 	try_with_key_fail("TLS 1.3 with client rsa encryption cert",
 			"NORMAL:-VERS-ALL:+VERS-TLS1.3",
-			GNUTLS_E_AGAIN, GNUTLS_E_KEY_USAGE_VIOLATION,
+			GNUTLS_E_AGAIN, GNUTLS_E_INSUFFICIENT_CREDENTIALS,
 			&server_ca3_rsa_pss_cert, &server_ca3_rsa_pss_key, &server_ca3_localhost_rsa_decrypt_cert, &server_ca3_key);
 
 	try_with_key_fail("TLS 1.3 with (forced) client rsa encryption cert - server should detect",
